--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\Prover.Client\packages.config" />
+  <repository path="..\..\Prover\packages.config" />
   <repository path="..\DamProverModel\packages.config" />
   <repository path="..\packages.config" />
+  <repository path="..\Prover.Console\packages.config" />
 </repositories>
