--- a/src/DAM Prover.vbproj
+++ b/src/DAM Prover.vbproj
@@ -72,6 +72,25 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Measurement Computing\DAQ\MccDaq.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Expression.Interactions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>packages\Prism.4.1.0.0\lib\NET40\Microsoft.Expression.Interactions.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Prism">
+      <HintPath>packages\Prism.4.1.0.0\lib\NET40\Microsoft.Practices.Prism.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Prism.Interactivity">
+      <HintPath>packages\Prism.4.1.0.0\lib\NET40\Microsoft.Practices.Prism.Interactivity.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.ServiceLocation">
+      <HintPath>packages\CommonServiceLocator.1.0\lib\NET35\Microsoft.Practices.ServiceLocation.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\Unity.3.0.1304.0\lib\Net45\Microsoft.Practices.Unity.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Configuration">
+      <HintPath>packages\Unity.3.0.1304.0\lib\Net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+    </Reference>
     <Reference Include="miSerialProtocol, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\serialprotocol\miSerialProtocol\bin\Debug\miSerialProtocol.dll</HintPath>
@@ -92,6 +111,9 @@
       <HintPath>..\..\..\..\..\..\WINDOWS\assembly\GAC_MSIL\System.Web.Services\2.0.0.0__b03f5f7f11d50a3a\System.Web.Services.dll</HintPath>
     </Reference>
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Interactivity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>packages\Prism.4.1.0.0\lib\NET40\System.Windows.Interactivity.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -112,7 +134,6 @@
     <Compile Include="ApplicationEvents.vb" />
     <Compile Include="Classes\Base\CSVWriterClass.vb" />
     <Compile Include="Classes\Base\DriveTypes\OpenLayers.vb" />
-    <Compile Include="Classes\Customers\Customer.vb" />
     <Compile Include="Classes\Base\DABoard.vb" />
     <Compile Include="Classes\Base\Database.vb" />
     <Compile Include="Classes\Base\DriveTypes\MechanicalTestClass.vb" />
@@ -126,9 +147,6 @@
     <Compile Include="Classes\Base\PressureFactorClass.vb" />
     <Compile Include="Classes\Base\SuperFactorClass.vb" />
     <Compile Include="Classes\Base\XMLWriterClass.vb" />
-    <Compile Include="Classes\Customers\CustomerDataContext.vb" />
-    <Compile Include="Classes\Customers\CustomersProvider.vb" />
-    <Compile Include="Classes\Customers\ICustomers.vb" />
     <Compile Include="Classes\DABoards\DigitalInputSubsystem.vb" />
     <Compile Include="Classes\DABoards\PCIDataAcqClass.vb" />
     <Compile Include="Classes\DABoards\SubsystemType.vb" />
@@ -346,9 +364,9 @@
     <Folder Include="Reports\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="DamProverModel\DamProverModel.vbproj">
+    <ProjectReference Include="DamProverModel\Prover.Model.vbproj">
       <Project>{618af5d8-a289-4ea0-9584-c411b213ef22}</Project>
-      <Name>DamProverModel</Name>
+      <Name>Prover.Model</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.VisualBasic.targets" />
