--- a/src/DamProverModel/App.Config
+++ b/src/DamProverModel/App.Config
@@ -25,7 +25,7 @@
     </sharedListeners>
   </system.diagnostics>
   <connectionStrings>
-	  <add name="DAMProverEntities" connectionString="metadata=res://*/ProverModel.csdl|res://*/ProverModel.ssdl|res://*/ProverModel.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;data source=|DataDirectory|\DAMProver.sdf&quot;" providerName="System.Data.EntityClient" />
+    <add name="DAMProverEntities" connectionString="metadata=res://*/ProverModel.csdl|res://*/ProverModel.ssdl|res://*/ProverModel.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;data source=C:\Users\amcquaig\Documents\Dev\damprover\src\Prover.Console\DAMProver.sdf&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
