--- a/src/Prover.Console/App.config
+++ b/src/Prover.Console/App.config
@@ -4,6 +4,10 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
 	<connectionStrings>
-		<add name="DAMProverEntities" connectionString="metadata=res://*/ProverModel.csdl|res://*/ProverModel.ssdl|res://*/ProverModel.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;data source=|DataDirectory|\DAMProver.sdf&quot;" providerName="System.Data.EntityClient" />
+		<add name="DAMProverEntities" 
+			 connectionString="metadata=res://*/ProverModel.csdl|
+										res://*/ProverModel.ssdl|
+										res://*/ProverModel.msl;
+				provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;data source=|DataDirectory|\DAMProver.sdf&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 </configuration>
