* Updated miSerialProtocol to use dictionary and list
* Serialize downloaded items list to xml

--- a/Prover/Prover.Data.vbproj
+++ b/Prover/Prover.Data.vbproj
@@ -94,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.vb" />
+    <Compile Include="Communications\InstrumentCommunications.vb" />
     <Compile Include="Customers\Customer.vb" />
     <Compile Include="Customers\CustomerDataContext.vb" />
     <Compile Include="Customers\CustomersProvider.vb" />
