--- a/src/Prover.Console/Prover.Console.vbproj
+++ b/src/Prover.Console/Prover.Console.vbproj
@@ -149,6 +149,10 @@
       <Project>{f397ca27-ec97-4b98-b8cf-e60eb1f399b9}</Project>
       <Name>Prover.Data</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\serialprotocol\miSerialProtocol\miSerialProtocol.vbproj">
+      <Project>{8c7e475a-15bb-477b-99f3-7b2abf41e43f}</Project>
+      <Name>miSerialProtocol</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="DAMProver.sdf">
