--- a/serialprotocol/miSerialProtocol/miSerialProtocol.vbproj
+++ b/serialprotocol/miSerialProtocol/miSerialProtocol.vbproj
@@ -145,7 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="MiniMax\MiniMaxItems.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
