--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -2,8 +2,12 @@
 <repositories>
   <repository path="..\..\Prover.Certificates.Data\packages.config" />
   <repository path="..\..\Prover.Client\packages.config" />
+  <repository path="..\..\Prover.Console\packages.config" />
   <repository path="..\..\Prover.Instruments.Data\packages.config" />
+  <repository path="..\..\Prover.Instruments\packages.config" />
+  <repository path="..\..\Prover.UI\packages.config" />
   <repository path="..\..\Prover\packages.config" />
+  <repository path="..\..\serialprotocol\miSerialProtocol\packages.config" />
   <repository path="..\DamProverModel\packages.config" />
   <repository path="..\packages.config" />
   <repository path="..\Prover.Console\packages.config" />
