--- a/Prover.Instruments.Data/packages.config
+++ b/Prover.Instruments.Data/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.5" targetFramework="net45" />
   <package id="Prism" version="4.1.0.0" targetFramework="net45" />
+  <package id="RavenDB.Client" version="2.0.2360" targetFramework="net45" />
+  <package id="RavenDB.Database" version="2.0.2360" targetFramework="net45" />
+  <package id="RavenDB.Embedded" version="2.0.2360" targetFramework="net45" />
   <package id="Unity" version="3.0.1304.0" targetFramework="net45" />
 </packages>
