--- a/serialprotocol/miSerialProtocol/Prover.SerialProtocol.vbproj
+++ b/serialprotocol/miSerialProtocol/Prover.SerialProtocol.vbproj
@@ -64,6 +64,9 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\src\packages\Newtonsoft.Json.5.0.5\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
@@ -83,6 +86,7 @@
     <Import Include="System.Diagnostics" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EC300Class.vb" />
     <Compile Include="ECATClass.vb" />
     <Compile Include="MiniMax\MiniMaxClass.vb" />
     <Compile Include="miSerialProtocolClass.vb" />
@@ -134,6 +138,7 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.2.0">
